tests/syntax_error/python_style_for.jou
def main() -> int:
    # TODO: not fully happy with this error message.
    # It will be a common error that people run into.
    for i in range(10):  # Error: not a valid statement
        return 1
    return 0
